# platform.core.system.buxton2

./: CMakeLists.txt  project.config
backend/: CMakeLists.txt  gdbm.c
client/: CMakeLists.txt  c_common.c  c_common.h  c_direct.c  c_direct.h  c_log.h  c_main.c  c_proc.c  c_proc.h
common/: backend.h  backends.c  backends.h  common.c  common.h  config.c  config.h  direct.c  direct.h  log.h  proto.c  proto.h  serialize.c  serialize.h
daemon/: CMakeLists.txt  cynara.c  cynara.h  daemon.c  daemon.h  dbus.c  dbus.h  main.c  socks.c  socks.h
doc/: vconf_doc.h
example/: CMakeLists.txt  README  get_async.c  get_sync.c  set_async.c  set_sync.c
lib/: CMakeLists.txt  buxton2.c  buxton2.pc.in
lib/include/: buxton2.h
packaging/: buxton2-pre.service  buxton2.conf  buxton2.manifest  buxton2.service  buxton2.socket  buxton2.spec
vconf-compat/: CMakeLists.txt  vconf-keys.h  vconf.c  vconf.h  vconf.pc.in  vconf.sym  vconftool
