# gdbm.so build
SET(TARGET gdbm)
SET(SRC gdbm.c)
ADD_LIBRARY(${TARGET} SHARED ${SRC})
SET_TARGET_PROPERTIES(${TARGET} PROPERTIES
		PREFIX ""
		COMPILE_FLAGS "-fvisibility=hidden"
)
TARGET_LINK_LIBRARIES(${TARGET} ${PKGS_LDFLAGS} -lgdbm)
INSTALL(TARGETS ${TARGET} DESTINATION ${MODULE_DIR} COMPONENT RuntimeLibraries)

