# libvconf build

PKG_CHECK_MODULES(V_PKGS REQUIRED vconf-internal-keys)

FOREACH(flag ${V_PKGS_CFLAGS})
	SET(VCONF_CFLAGS "${VCONF_CFLAGS} ${flag}")
ENDFOREACH()
SET(VCONF_CFLAGS "-fvisibility=hidden ${VCONF_CFLAGS}")

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/lib/include)

SET(SRC vconf.c)
ADD_LIBRARY(vconf SHARED ${SRC})
SET_TARGET_PROPERTIES(vconf PROPERTIES
		COMPILE_FLAGS ${VCONF_CFLAGS}
		LINK_FLAGS "-Wl,--version-script=vconf.sym"
		VERSION 0.3.1
		SOVERSION 0
)
TARGET_LINK_LIBRARIES(vconf ${PKG_LDFLAGS} buxton2)
INSTALL(TARGETS vconf DESTINATION ${LIB_INSTALL_DIR})

CONFIGURE_FILE(vconf.pc.in vconf.pc @ONLY)
INSTALL(FILES vconf.pc DESTINATION ${LIB_INSTALL_DIR}/pkgconfig)

INSTALL(FILES vconf.h vconf-keys.h DESTINATION ${INCLUDE_INSTALL_DIR}/vconf)

INSTALL(PROGRAMS vconftool DESTINATION bin)

